import "util.proto";


}
message Status {
 required bool ok = 1;
 optional string message = 2;
}
message GetRequest {
 required string key = 1;
}

message GetResponse {
 repeated string values = 1;
 required Status status = 2;
}

message PutRequest {
 required string key = 1;
 required string value = 2;
 optional int32 ttl = 3;
}
message PutResponse {
 required Status status = 2;
}
message CRUDResponse {
 required Status status = 1;
}
message StoreObjectRequest {
 required string key = 1;
 required string value = 2;
 optional int32 time =3;
 optional string app = 4;
 optional string protocol = 5;
 optional bool public = 6;
}
message DeleteObjectRequest {
 required string key = 1;
}
